--- a/app/views/asistencia_mailer/notificar_asistencia.html.erb
+++ b/app/views/asistencia_mailer/notificar_asistencia.html.erb
@@ -2,9 +2,12 @@
 
 <p>Estimado(a) señor(a) <%= @persona.nombres %>:</p>
 <% if @movimiento == 1 %>
-    <p>Su hijo(a) <%= @alumno.apellidos_nombres %> ha registrado su ingreso al colegio a las <% @marcacion.strftime('%H:%M')%>  </p>
+    <p>Su hijo(a) <%= @alumno.apellidos_nombres %> ha registrado su ingreso al colegio a las <%= @marcacion.fecha_hora.strftime('%H:%M')%>  </p>
 <% else %>
-    <p>Su hijo(a) <%= @alumno.apellidos_nombres %> ha registrado su salida del colegio a las <% @marcacion.strftime('%H:%M')%> </p>
+    <p>Su hijo(a) <%= @alumno.apellidos_nombres %> ha registrado su salida del colegio a las <%= @marcacion.fecha_hora.strftime('%H:%M')%> </p>
+    <% if !@marcacion.persona_vinculada_id.nil? %>
+        <p>con la persona <%= PersonaVinculada.find(@marcacion.persona_vinculada_id).apellidos_nombres %> </p>      
+    <% end %>
 <% end %>
 
 <p>
