--- a/app/views/inasistencia_mailer/notificacion_inasistencia.text.erb
+++ b/app/views/inasistencia_mailer/notificacion_inasistencia.text.erb
@@ -1,6 +1,6 @@
 Estimado(a) señor(a) <%= @persona.apellidos_nombres %>:
 
-Se le informa que hoy, hasta las 10:00 am su hijo(a) <%= @alumno.apellidos_nombres %> registra una inasistencia al colegio.
+Se le informa que hoy, hasta las <%= @horanotificacion %> am su hijo(a) <%= @alumno.apellidos_nombres %> registra una inasistencia al colegio.
 
 Puede registrar la justificación de la falta de su hijo(a) en las observaciones del cuaderno de control.
 
