--- a/app/views/listas_valores/_form.html.erb
+++ b/app/views/listas_valores/_form.html.erb
@@ -23,7 +23,7 @@
     </div>
     <div class="field">
         <%= "Descripcion (*)" %><br />
-        <%= f.text_field :descripcion, :required => "required", :pattern => "^[a-zA-ZñÑ ]*$", :title => "Solo estan permitidos letras" %>
+        <%= f.text_field :descripcion, :required => "required" %>
     </div>
     <div class="field">
         <%= f.label :abreviatura %><br />
