--- a/app/views/colegios/_form.html.erb
+++ b/app/views/colegios/_form.html.erb
@@ -42,6 +42,10 @@
     <%= f.text_field :director %>
   </div>
   <div class="field">
+    Notificar inasistencia<br />
+    <%= collection_select(:colegio, :notificar_inasistencia, ListaValor.where("tabla=10"), :item, :descripcion, {:prompt => ':: Seleccione ::'}, {"data-mini" => "true", :required => "required"}) %>
+  </div>  
+  <div class="field">
     Estado<br />
     <select <%= f.number_field :estado, "data-role" => "slider", "data-mini" => "true" %> >
                 <option value = 0 <% if @colegio.estado == 0 %> selected <%end%> >Baja</option>
