--- a/app/views/inasistencia_mailer/notificacion_inasistencia.html.erb
+++ b/app/views/inasistencia_mailer/notificacion_inasistencia.html.erb
@@ -1,5 +1,5 @@
 <p>Estimado(a) señor(a) <%= @persona.apellidos_nombres %>:</p>
-<p>Se le informa que hoy, hasta las 10:00 am su hijo(a) <%= @alumno.apellidos_nombres %> registra una inasistencia al colegio.</p>
+<p>Se le informa que hoy, hasta las <%= @horanotificacion %> am su hijo(a) <%= @alumno.apellidos_nombres %> registra una inasistencia al colegio.</p>
 <p>
   Puede registrar la justificación de la falta de su hijo(a) en las observaciones del cuaderno de control.
 </p>
