actualizacion de usuarios

--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -60,7 +60,25 @@
               <option value = 0 <% if @usuario.notificado == 0 %> selected <%end%> >No</option>
               <option value = 1 <% if @usuario.notificado == 1 %> selected <%end%> >Si</option>
   </select>
-  
+
+  <div class="field">
+    Nivel de acceso:<br />
+    <fieldset data-role = "controlgroup" data-type  = "horizontal"  data-mini = "true" >
+        <% if @usuario.alcance_colegio == 1 %>
+            <%= f.number_field :alcance_colegio, "type" => "radio", "id" => "radio-opc2", "value" => 1, "checked" =>"checked" %>
+        <% else%>
+            <%= f.number_field :alcance_colegio, "type" => "radio", "id" => "radio-opc2", "value" => 1 %>
+        <% end %>
+        <label for="radio-opc2">Colegio</label>
+        <% if @usuario.alcance_colegio == 0 %>
+            <%= f.number_field :alcance_colegio, "type" => "radio", "id" => "radio-opc1", "value" => 0, "checked" =>"checked" %>
+        <% else%>
+            <%= f.number_field :alcance_colegio, "type" => "radio", "id" => "radio-opc1", "value" => 0 %>
+        <% end %>
+        <label for="radio-opc1">Grados y Secciones</label>
+    </fieldset>
+  </div>
+
 </div>
 <div class="actions">
     <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
