--- a/app/views/actividades_secciones/_form.html.erb
+++ b/app/views/actividades_secciones/_form.html.erb
@@ -13,15 +13,26 @@
     <% end %>
   <% end %>
 
-  <!--div data-role="fieldcontain" -->
-  <div data-role="content" class="content-primary">
-    <%= f.hidden_field :actividad_id %>
-    <%= f.hidden_field :usuario, :value => current_user.usuario %>
-    <div style="width: 200px; clear: left; float: left">
-      <%= collection_select(:actividad_seccion, :seccion_id, Seccion.por_anioescolar(anio_escolar.id).order('grados.grado','seccion'), :id, :grado_seccion, {:prompt => ':: Seleccione ::' }, {"data-mini" => "true", :required => "required"}) %>
+  <% if @actividad.alcance_colegio == 0 %>
+    <div style="clear: left; font-size: 12px">
+      <%= "Secciones participantes:" %><br />
+    </div>    
+    <!--div data-role="fieldcontain" -->
+    <div data-role="content" class="content-primary">
+      <%= f.hidden_field :actividad_id %>
+      <%= f.hidden_field :usuario, :value => current_user.usuario %>
+      <div style="width: 200px; clear: left; float: left">
+        <% usuario = Usuario.find_by_usuario(current_user.usuario) %>
+        <% if usuario.perfil_id == 3 && usuario.alcance_colegio == 0%>
+            <% @secciones = Seccion.por_anioescolar_usuario(anio_escolar.id, usuario.id).order('grados.nivel','grados.grado','seccion') %>
+        <% else %>
+            <% @secciones = Seccion.por_anioescolar(anio_escolar.id).order('grados.nivel','grados.grado','seccion') %>
+        <% end %>
+        <%= collection_select(:actividad_seccion, :seccion_id, @secciones, :id, :grado_seccion, {:prompt => ':: Seleccione ::' }, {"data-mini" => "true", :required => "required"}) %>
+      </div>
+      <div style="float: left">
+        <%= f.submit "", "data-inline" => "true", "data-theme" => "a", "data-icon" => "plus", "data-mini" => "true", "data-iconpos" => "notext" %>    
+      </div>
     </div>
-    <div style="float: left">
-      <%= f.submit "", "data-inline" => "true", "data-theme" => "a", "data-icon" => "plus", "data-mini" => "true", "data-iconpos" => "notext" %>    
-    </div>
-  </div>
-<% end %>
+  <% end %>
+<% end %>    
