--- a/app/views/autorizaciones/index.html.erb
+++ b/app/views/autorizaciones/index.html.erb
@@ -10,11 +10,20 @@
   <% seccion = params[:seccion_id] %>
 <% end %>
 
+<% usuario = Usuario.find_by_usuario(current_user.usuario) %>
+<% if usuario.perfil_id == 3 && usuario.alcance_colegio == 0%>
+  <% @actividades = Actividad.por_secciones_usuario(anio_escolar.id, usuario.id).order("fecha_hora_inicio DESC") %>
+  <% @secciones   = Seccion.por_anioescolar_usuario(anio_escolar.id, usuario.id).order('grados.nivel','grados.grado','seccion') %>
+<% else %>
+  <% @actividades = Actividad.where("anio_escolar_id = ? and requiere_autorizacion = 1", anio_escolar.id).order("fecha_hora_inicio DESC") %>
+  <% @secciones   = Seccion.por_anioescolar(anio_escolar.id).order('grados.nivel','grados.grado','seccion') %>
+<% end %>
+
 <div data-role="content">
   <%= form_tag(autorizaciones_path, {:method => :get, "data-ajax" => "false", "name" => "buscar"}) do %>
     <div data-role="fieldcontain">
-      Actividad: <%= collection_select(:actividad, :id, Actividad.where("anio_escolar_id = ? and requiere_autorizacion = 1", anio_escolar.id).order("fecha_hora_inicio DESC"), :id, :nombre_fecha, {:selected => actividad}, {"data-mini" => "true", :name => "actividad_id"}) %><br />
-      Sección: <%= collection_select(:seccion, :id, Seccion.por_anioescolar(anio_escolar.id).order('grados.grado','seccion'), :id, :grado_seccion, { :prompt => ':: Seleccione ::', :selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      Actividad: <%= collection_select(:actividad, :id, @actividades, :id, :nombre_fecha, {:selected => actividad}, {"data-mini" => "true", :name => "actividad_id"}) %><br />
+      Sección: <%= collection_select(:seccion, :id, @secciones, :id, :grado_seccion, { :prompt => ':: Seleccione ::', :selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
     </div>
   <% end %>
