--- a/app/views/cuaderno_controles_revisiones/index.html.erb
+++ b/app/views/cuaderno_controles_revisiones/index.html.erb
@@ -19,12 +19,19 @@
   <% end %>
 <% end %>
 
+<% usuario = Usuario.find_by_usuario(current_user.usuario) %>
+<% if usuario.perfil_id == 3 && usuario.alcance_colegio == 0%>
+  <% @secciones = Seccion.por_anioescolar_usuario(anio_escolar.id, usuario.id).order('grados.nivel', 'grados.grado','seccion') %>
+<% else %>
+  <% @secciones = Seccion.por_anioescolar(anio_escolar.id).order('grados.nivel', 'grados.grado','seccion') %>
+<% end %>
+
 <div data-role="content">
   <% if params[:accion].nil? || params[:accion] == "verificar" %>
     <%= form_tag(cuaderno_controles_revisiones_path, {:method => :get, "onSubmit" => "return validarBusquedaXFecha();", "data-ajax" => "false", "name" => "buscar"}) do %>
       <div data-role="fieldcontain">
         Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:130px") %><br />
-        Sección: <%= collection_select(:seccion, :id, Seccion.por_anioescolar(anio_escolar.id).order('grados.grado','seccion'), :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+        Sección: <%= collection_select(:seccion, :id, @secciones, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
         <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
       </div>
     <% end %>
