--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -30,6 +30,9 @@
         <% if [1,3].include? current_user.perfil_id %>
           <li><a href="<%= cuaderno_controles_revisiones_path(:accion => :verificar) %>">Verificar</a></li>
         <% end %>
+        <% if [1,2].include? current_user.perfil_id %>
+          <li><a href="<%= cuaderno_controles_eventos_path %>">Consultar eventos programados</a></li>
+        <% end %>
       <% end %>
 
 
